# PathFinder

./: CMakeLists.txt  main.c
assets/: invalid_debilniy_kase)  invalid_max_int  test
inc/: base_handler.h  error_handler.h  pathfinder.h
libmx/: Makefile
libmx/inc/: libmx.h
libmx/src/: mx_arr_size.c  mx_atoi.c  mx_atoll.c  mx_binary_search.c  mx_bubble_sort.c  mx_check_str_int.c  mx_count_substr.c  mx_count_words.c  mx_create_node.c  mx_del_extra_spaces.c  mx_del_strarr.c  mx_delete_trailing_char.c  mx_file_to_str.c  mx_foreach.c  mx_free.c  mx_get_char_index.c  mx_get_hex_digits_count.c  mx_get_substr_index.c  mx_hex_to_nbr.c  mx_intlen.c  mx_is_number.c  mx_is_whitespace.c  mx_isalpha.c  mx_isdigit.c  mx_isonlyalpha.c  mx_isupper.c  mx_itoa.c  mx_list_size.c  mx_m_read_line.c  mx_makestring.c  mx_malloc.c  mx_malloc_size.c  mx_memccpy.c  mx_memchr.c  mx_memcmp.c  mx_memcpy.c  mx_memmem.c  mx_memmove.c  mx_memrchr.c  mx_memset.c  (+32 more)
src/base_handler/: get_file_size.c  init_base.c  reopen_file.c  validate_connections.c
src/error_handler/: init_error.c  raise_error.c
